apps/base/service-1/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: service-1
  labels:
    istio-injection: enabled
