apps/base/service-1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-1
  namespace: service-1
spec:
  type: LoadBalancer
  selector:
    app: service-1
  ports:
    - port: 80
      targetPort: 80
