apps/base/service-1/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: service-2-from-service-1
  namespace: service-1
spec:
  host: service-2-nginx.service-2.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL   # mTLS explícito cross-namespace
